# vmaccel

./: .clang-format  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  README.md
accelerators/: CMakeLists.txt
accelerators/vmaccel/: CMakeLists.txt  gen_formats_enum.py
accelerators/vmaccel/cmake/libvmaccel_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccel_hybrid_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccel_local_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccel_rpc/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccel_rpc_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccel_server/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccelmgr_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccelmgr_hybrid_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccelmgr_local_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccelmgr_rpc/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccelmgr_rpc_client/: CMakeLists.txt
accelerators/vmaccel/cmake/libvmaccelmgr_server/: CMakeLists.txt
accelerators/vmaccel/cmake/vmaccel_client/: CMakeLists.txt
accelerators/vmaccel/cmake/vmaccel_manager/: CMakeLists.txt
accelerators/vmaccel/cmake/vmaccel_server/: CMakeLists.txt
accelerators/vmaccel/cmake/vmaccelmgr_server/: CMakeLists.txt
accelerators/vmaccel/specs/: vmaccel_callback_rpc.x  vmaccel_formats.json  vmaccel_mgr.x  vmaccel_rpc.x
accelerators/vmaccel/src/: vmaccel_allocator.cpp  vmaccel_callback_clnt.c  vmaccel_callback_rpc_client.c  vmaccel_callback_rpc_clnt.c  vmaccel_callback_rpc_server.c  vmaccel_callback_rpc_svc.c  vmaccel_callback_rpc_xdr.c  vmaccel_clnt.c  vmaccel_manager.cpp  vmaccel_manager.h  vmaccel_manager.hpp  vmaccel_mgr_clnt.c  vmaccel_mgr_server.c  vmaccel_mgr_svc.c  vmaccel_rpc_clnt.c  vmaccel_rpc_manager.c  vmaccel_rpc_mgr.c  vmaccel_rpc_server.c  vmaccel_rpc_svc.c  vmaccel_rpc_xdr.c
accelerators/vmcl/: CMakeLists.txt
accelerators/vmcl/cmake/libvmcl_client/: CMakeLists.txt
accelerators/vmcl/cmake/libvmcl_hybrid_client/: CMakeLists.txt
accelerators/vmcl/cmake/libvmcl_local_client/: CMakeLists.txt
accelerators/vmcl/cmake/libvmcl_rpc/: CMakeLists.txt
accelerators/vmcl/cmake/libvmcl_rpc_client/: CMakeLists.txt
accelerators/vmcl/cmake/libvmcl_server/: CMakeLists.txt
accelerators/vmcl/cmake/vmcl_server/: CMakeLists.txt
accelerators/vmcl/specs/: vmcl_callback_rpc.x  vmcl_rpc.x
accelerators/vmcl/src/: vmcl_callback_clnt.c  vmcl_callback_rpc_client.c  vmcl_callback_rpc_clnt.c  vmcl_callback_rpc_server.c  vmcl_callback_rpc_svc.c  vmcl_callback_rpc_xdr.c  vmcl_clnt.c  vmcl_rpc_clnt.c  vmcl_rpc_server.c  vmcl_rpc_svc.c  vmcl_rpc_xdr.c
accelerators/vmcodec/: CMakeLists.txt
accelerators/vmcodec/cmake/libvmcodec_client/: CMakeLists.txt
accelerators/vmcodec/cmake/libvmcodec_server/: CMakeLists.txt
accelerators/vmcodec/cmake/vmcodec_server/: CMakeLists.txt
accelerators/vmcodec/specs/: vmcodec_rpc.x
accelerators/vmcodec/src/: vmcodec_rpc_clnt.c  vmcodec_rpc_server.c  vmcodec_rpc_svc.c  vmcodec_rpc_xdr.c
accelerators/vmxc/: CMakeLists.txt
accelerators/vmxc/cmake/libvmxc/: CMakeLists.txt
accelerators/vmxc/cmake/vmxc_service/: CMakeLists.txt
accelerators/vmxc/specs/: vmxc.x
accelerators/vmxc/src/: vmxc_client.c  vmxc_clnt.c  vmxc_server.c  vmxc_spirv.h  vmxc_spirv_base.hpp  vmxc_spirv_clone.cpp  vmxc_spirv_transcode.cpp  vmxc_spirv_validate.cpp  vmxc_svc.c  vmxc_xdr.c
accelerators/vmxc/src/transcoders/: cout_bb_pass.cpp  cout_bb_pass.h  cout_cfg_pass.cpp  cout_cfg_pass.h  cout_live_reg.cpp  cout_live_reg.h  cout_pass.cpp  cout_pass.h  reg_analysis_pass.cpp  reg_analysis_pass.h
backends/: CMakeLists.txt
backends/vmwffmpeg/: CMakeLists.txt
backends/vmwffmpeg/cmake/libvmwffmpeg/: CMakeLists.txt
backends/vmwffmpeg/src/: vmwffmpeg_ops.c
backends/vmwopencl/: CMakeLists.txt
backends/vmwopencl/cmake/libvmwopencl/: CMakeLists.txt
backends/vmwopencl/src/: vmwopencl_caps.h  vmwopencl_ops.c  vmwopencl_utils.c  vmwopencl_utils.h
cmake/developer/: CMakeLists.txt
common/: CMakeLists.txt
common/inc/: log_level.h  vmaccel.hpp  vmaccel_ai.hpp  vmaccel_allocator.hpp  vmaccel_callback_rpc.h  vmaccel_codec.hpp  vmaccel_compute.hpp  vmaccel_defs.h  vmaccel_formats.h  vmaccel_formats_enum.h  vmaccel_local.h  vmaccel_manager.h  vmaccel_mgr.h  vmaccel_mgr_utils.h  vmaccel_ops.h  vmaccel_planar_formats.h  vmaccel_rpc.h  vmaccel_stream.h  vmaccel_types_address.h  vmaccel_types_address.hpp  vmaccel_types_allocrange.hpp  vmaccel_types_desc.hpp  vmaccel_types_int.hpp  vmaccel_utils.h  vmai_core.hpp  vmai_defs.h  vmcl_callback_rpc.h  vmcl_defs.h  vmcl_local.h  vmcl_ops.h  vmcl_rpc.h  vmcodec_defs.h  vmcodec_ops.h  vmcodec_rpc.h  vmwffmpeg.h  vmwopencl.h  vmxc.h
common/src/: vmaccel_stream.c  vmaccel_utils.c  vmaccel_utils.cpp
examples/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
examples/cpp/basic_compute_nolib/: CMakeLists.txt  basic_compute.cpp
examples/cpp/hybrid_compute/: CMakeLists.txt  hybrid_compute.cpp
examples/cpp/membench/: CMakeLists.txt  membench.cpp
examples/k8s/: README  README.md  agent-setup-xenial.yml  control-plane-setup-containerd.yml  control-plane-setup-crio.yml  hosts  (+9 more)
frontends/: CMakeLists.txt
frontends/vmaccel/: CMakeLists.txt
frontends/vmaccel/cmake/libvmaccel/: CMakeLists.txt
frontends/vmaccel/cmake/libvmaccel_hybrid/: CMakeLists.txt
frontends/vmaccel/cmake/libvmaccel_local/: CMakeLists.txt
frontends/vmaccel/cmake/vmaccel_client/: CMakeLists.txt
frontends/vmaccel/cmake/vmaccelmgr_client/: CMakeLists.txt
frontends/vmaccel/src/: vmaccel.c  vmaccel.cpp  vmaccel_mgr_client.c  vmaccel_rpc_client.c
scripts/: format_source.py
test/: CMakeLists.txt  identifier_db_test.cpp  vmaccel_allocator_allocrange_test.cpp  vmaccel_allocator_desc_test.cpp  vmaccel_allocator_int_test.cpp
tests/: CMakeLists.txt  identifier_db_test.cpp  vmaccel_allocator_allocrange_test.cpp  vmaccel_allocator_desc_test.cpp  vmaccel_allocator_int_test.cpp  vmaccel_stream_client_test.cpp  vmaccel_stream_server_test.cpp
(+46 files in other folders)
